# scribe

./: .gitignore  CLAUDE.md  DAEMON_ARCHITECTURE.md  README.md  WINDOWS-PACKAGING.md  build-ci.ps1  build-windows.bat  build-windows.ps1  performance_comparison.py  profile_startup.py  pyproject.toml  requirements-windows-build.txt  scribe-cli.spec  scribe-daemon.desktop  scribe-gui-windows.spec  scribe.desktop  test_daemon.py  test_startup_timing.sh  test_windows_audio.py
.github/workflows/: build-windows.yml  release.yml  test.yml
scribe/: README.md
scribe/src/scribe/: main.py
src/scribe/: __init__.py  client.py  daemon.py  daemon_manager.py  gui.py  gui_daemon.py  gui_windows.py  ipc.py  main.py
