[project]
name = "scribe"
version = "0.1.0"
description = "A CLI tool for real-time speech-to-text transcription using OpenAI Whisper"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faster-whisper",
    "numpy>=2.0.0",
    "click",
    "torch==2.7.0",
    "torchaudio==2.7.0",
    "sounddevice",
]

[project.optional-dependencies]
gtk = ["PyGObject"]
all = ["PyGObject"]

[project.scripts]
scribe = "scribe.main:main"
scribe-gui = "scribe.gui:main"
scribe-gui-windows = "scribe.gui_windows:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
